# complete-mlops-pipeline

./: .dvcignore  .gitignore  README.md  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: ci.yml
configs/: train.yaml
configs/experiments/: 01_logreg_balanced.yaml  02_logreg_stronger_regularization.yaml  03_logreg_no_class_weight.yaml  04_random_forest_balanced.yaml  05_gradient_boosting.yaml
docs/: architecture.md  decision_log.md  drift_analysis.md  project_walkthrough.md  requirement_traceability.md  roadmap.md
src/mlops_pipeline/: __init__.py  compare_experiments.py  config.py  data_validation.py  dataset_audit.py  drift_batches.py  evaluate.py  exceptions.py  experiment_runner.py  monitor_drift.py  phase4_support.py  preprocess.py  train.py
tests/: conftest.py  test_config.py  test_data_validation.py  test_drift_monitoring.py  test_evaluation.py  test_model_validation.py  test_phase4_comparison.py  test_phase4_mlflow.py  test_phase5_ci.py  test_preprocess.py
